# daytradingjournal

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  db.rs  lib.rs  main.rs  models.rs
src/components/: app-shell.tsx  charts.tsx  csv-panel.tsx  dashboard.tsx  settings-screen.tsx  trade-form.tsx  trade-history.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  table.tsx  textarea.tsx
src/lib/: i18n.tsx  tauri.ts  types.ts  utils.ts
