[package]
name = "quantum-trader-journal"
version = "0.1.4"
description = "Portable trading journal built with Tauri 2.0"
authors = ["Codex"]
edition = "2021"

[lib]
name = "quantum_trader_journal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
calamine = "0.26"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2.0.0"
tempfile = "3.13"
thiserror = "2.0"
uuid = { version = "1.10", features = ["serde", "v4", "v5"] }
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
